--- a/src/main/resources/templates/listproduct.html
+++ b/src/main/resources/templates/listproduct.html
@@ -14,6 +14,7 @@
                             <h4 class="card-title ">Product admin</h4>
                         </div>
                         <div class="card-body">
+                            <a href="/createproduct" class="btn btn-primary">Create Product</a>
                             <div class="table-responsive">
                                 <table class="table">
                                     <thead class=" text-primary">
