--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/adminlayout/template_admin.html}">
-<title>list order</title>
+<title>History</title>
 <body>
 <div class="main-panel" layout:fragment="content">
     <div class="content">
@@ -11,11 +11,12 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header card-header-primary">
-                            <h4 class="card-title ">List Order </h4>
+                            <h4 class="card-title ">List order history </h4>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table">
+                                    <form method="post" action="/user_confirm">
                                         <thead class=" text-primary">
                                         <th scope="col">Phone</th>
                                         <th scope="col">Address</th>
@@ -25,7 +26,6 @@
                                         <th scope="col">Action</th>
                                         </thead>
                                         <tbody>
-
                                         <tr th:each="ord : ${orderItem}">
                                             <td th:text="${ord.phone}"></td>
                                             <td th:text="${ord.address}"></td>
@@ -33,15 +33,11 @@
                                             <td th:text="${ord.subtotal}"></td>
                                             <td th:text="${ord.status}"></td>
                                             <td>
-                                                <form method="post" action="/user_confirm">
-                                                <input type="hidden" name="id" th:value="${ord.orderid}">
-                                                <button type="submit" class="btn btn-primary">Received</button>
                                                 <a class="btn btn-success" th:href="@{/orderdetail(id=${ord.orderid})}">Detail</a>
-                                                </form>
                                             </td>
                                         </tr>
-
                                         </tbody>
+                                    </form>
                                 </table>
                                 <!--                                <nav aria-label="Page navigation">-->
                                 <!--                                    <ul class="pagination">-->
