--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -25,7 +25,6 @@
         </nav><!-- End .breadcrumb-nav -->
 
         <div class="page-content">
-            <form method="POST" >
             <div class="cart">
                 <div class="container">
                     <div class="row">
@@ -63,7 +62,7 @@
                                         <td class="quantity-col">
                                             <div class="cart-product-quantity">
                                                 <input type="number" name="qty" class="form-control" th:min="1" th:max="${item.product.quantity}" step="1"
-                                                       data-decimals="0" required th:value="${item.quantity}" th:name="qty">
+                                                       data-decimals="0" required th:value="${item.quantity}">
                                             </div><!-- End .cart-product-quantity -->
                                         </td>
                                         <td class="total-col productSubtotal" th:text="'$' + ${item.subtotal}">$84.00</td>
@@ -75,16 +74,6 @@
                             </table><!-- End .table table-wishlist -->
 
                             <div class="cart-bottom">
-                                <div class="cart-discount">
-                                        <div class="input-group">
-                                            <input type="text" class="form-control" required placeholder="coupon code">
-                                            <div class="input-group-append">
-                                                <button class="btn btn-outline-primary-2" type="submit"><i
-                                                        class="las la-long-arrow-alt-right"></i></button>
-                                            </div><!-- .End .input-group-append -->
-                                        </div><!-- End .input-group -->
-
-                                </div><!-- End .cart-discount -->
                                 <button type="submit" class="btn btn-outline-dark-2 update-cart"><span>UPDATE CART</span><i class="las la-sync"></i></button>
                             </div><!-- End .cart-bottom -->
                             </form>
@@ -92,17 +81,9 @@
                         <aside class="col-lg-3">
                             <div class="summary summary-cart">
                                 <h3 class="summary-title">Cart Total</h3><!-- End .summary-title -->
-
-                                <table class="table table-summary">
-                                    <tbody>
-                                    <tr class="summary-subtotal">
-                                        <td>Subtotal:</td>
-                                        <td>$160.00</td>
-                                    </tr><!-- End .summary-subtotal -->
-
                                     <tr class="summary-total">
                                         <td>Total:</td>
-                                        <td id="totalAmount">$160.00</td>
+                                        <td th:text="${total}">$160.00</td>
                                     </tr><!-- End .summary-total -->
                                     </tbody>
                                 </table><!-- End .table table-summary -->
@@ -111,7 +92,7 @@
                                     CHECKOUT</a>
                             </div><!-- End .summary -->
 
-                            <a href="index.html" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE SHOPPING</span><i
+                            <a href="/products" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE SHOPPING</span><i
                                     class="las la-long-arrow-alt-right"></i></a>
                         </aside><!-- End .col-lg-3 -->
                     </div><!-- End .row -->
