--- a/src/main/resources/templates/AdminIndex.html
+++ b/src/main/resources/templates/AdminIndex.html
@@ -31,14 +31,6 @@
                     </div>
                 </form>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="javascript:;">
-                            <i class="material-icons">dashboard</i>
-                            <p class="d-lg-none d-md-block">
-                                Stats
-                            </p>
-                        </a>
-                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="material-icons">notifications</i>
@@ -63,10 +55,9 @@
                             </p>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                            <a class="dropdown-item" href="#">Profile</a>
-                            <a class="dropdown-item" href="#">Settings</a>
+                            <a class="dropdown-item" href="/profile">Profile</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Log out</a>
+                            <a class="dropdown-item" href="/logout">Log out</a>
                         </div>
                     </li>
                 </ul>
@@ -81,11 +72,11 @@
                     <div class="card card-stats">
                         <div class="card-header card-header-warning card-header-icon">
                             <div class="card-icon">
-                                <i class="material-icons">content_copy</i>
+                                <i class="material-icons">account_balance_wallet</i>
                             </div>
-                            <p class="card-category">Used Space</p>
-                            <h3 class="card-title">49/50
-                                <small>GB</small>
+                            <p class="card-category">Balance</p>
+                            <h3 class="card-title" th:text="${user.wallet}">49/50
+                                <small>$</small>
                             </h3>
                         </div>
                         <div class="card-footer">
@@ -102,8 +93,8 @@
                             <div class="card-icon">
                                 <i class="material-icons">store</i>
                             </div>
-                            <p class="card-category">Revenue</p>
-                            <h3 class="card-title">$34,245</h3>
+                            <p class="card-category">Product</p>
+                            <h3 class="card-title" th:text="${product}">$34,245</h3>
                         </div>
                         <div class="card-footer">
                             <div class="stats">
@@ -116,9 +107,9 @@
                     <div class="card card-stats">
                         <div class="card-header card-header-danger card-header-icon">
                             <div class="card-icon">
-                                <i class="material-icons">info_outline</i>
+                                <i class="material-icons">assignment</i>
                             </div>
-                            <p class="card-category">Fixed Issues</p>
+                            <p class="card-category">Order pending</p>
                             <h3 class="card-title">75</h3>
                         </div>
                         <div class="card-footer">
@@ -132,9 +123,9 @@
                     <div class="card card-stats">
                         <div class="card-header card-header-info card-header-icon">
                             <div class="card-icon">
-                                <i class="fa fa-twitter"></i>
+                                <i class="material-icons">fact_check</i>
                             </div>
-                            <p class="card-category">Followers</p>
+                            <p class="card-category">Order done</p>
                             <h3 class="card-title">+245</h3>
                         </div>
                         <div class="card-footer">
